Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007  G.J. Paulissen 

See the end for copying conditions.

Please send DBUG bug reports to g.paulissen@chello.nl.


Release 4.6.0

* make distcheck now works with or without the Perl pdbug library.
* added M4 configuration file config/dbug.m4 to be used by projects
  which depend on dbug.


Release 4.5.0

* Installing the Perl pdbug library can be disabled by using 

  $ configure --disable-pdbug


Release 4.4.0

* The Perl pdbug library is added to the distribution.


Release 4.3.0

* Solved build problems due to new versions of autoconf/automake/libtool.


Release 4.2.0

* [ 1174400 ] average is displayed wrongly by dbugrpt


Release 4.1.0

* [ 1061551 ] Timing incorrect error


Release 4.0.0

* imake support obsoleted.
* LGPL license applied instead of GPL license.


Release 3.1.0

* Build DBUG in separate build environment.
* GNU Programming Standards enforced (ChangeLog, NEWS, etc.).
* make dist for imake and Autoconf separated.


Release 3.0.0

* Negative numbers for timing info solved. 
  Sourceforge Request ID 679212.
* Implement GNU build system.


Release 2.0.4

* Oracle Universal Installer support added.


Release 2.0.3 

* Ability to save log files with the process id by using %p in the
  output file name, e.g. dbug options is "d,t,o=dbug.%p.log".


Release 2.0.2 

* Vanderlande Industries ProPro 051270-5222 solved.  This happens when
  linking on a Solaris platform when the GNU compiler is used to compile
  the DBUG library:
  Undefined first referenced symbol in file __eprintf
   /usr/local/src/dbug/lib/libdbug.a(dbug.o)

   This bug shows up on Solaris when assert() is used and define NDEBUG
   (which ignores assertions) is not defined.  Solution: either go to
   $DBUG_HOME/src/lib and execute
   
   make EXTRA_DEFINES=-DNDEBUG clean depend all install

   as the last installation step.  The other solution is to specify
   -lgcc on the link command line (make EXTRA_LIBRARIES=-lgcc ...), because