@@ -2,8 +2,12 @@
 
 This is `DBUG', a Posix-threads debugging library.
 
-DBUG itself consists of the library, libdbug.la, and the headers installed
-in `/usr/local/include'.
+DBUG itself consists of the library (-ldbug), reporting tool dbugrpt and
+the header dbug.h installed in /usr/local/lib, /usr/local/bin and
+/usr/local/include by default. For Cygwin environments they are
+installed into /cygdrive/c/usr/local/lib, etcetera. The compiler (CC
+variable) will be set to to "gcc -mno-cygwin" (if not set already).
+
 
 See INSTALL for installation instructions.
 
